--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 </head>
 
-<body id="#home" class="scrollspy">
+<body id="home" class="scrollspy">
     <!-- Navigation section-->
     <div class="navbar-fixed">
         <nav class="teal">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="#" class="brand-logo">TravelVille</a>
+                    <a href="#homeslider" class="brand-logo white-text section">TravelVille</a>
                     <a href="#" data-target="mobile-nav" class="sidenav-trigger">
                         <i class="material-icons">menu</i>
                     </a>
@@ -65,14 +65,14 @@
     </ul>
 
     <!-- Slider section-->
-    <section class="slider">
+    <section class="slider" id="homeslider">
         <ul class="slides">
             <li>
                 <img src="./img/resort1.jpg">
                 <!-- random image -->
                 <div class="caption center-align">
                     <h2>Take Your Dream Vacation!</h2>
-                    <h5 class="light grey-text text-lighten-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam non illo earum cumque id est!</h5>
+                    <h5 class="light white-text text-lighten-4">Here, at the TravelVille, our job is to secure you a fun and high quality Travel tour to any location.</h5>
                     <a href="#" class="btn btn-large">Learn More</a>
                 </div>
             </li>
@@ -81,7 +81,7 @@
                 <!-- random image -->
                 <div class="caption left-align">
                     <h2>We Work With All Budgets</h2>
-                    <h5 class="light grey-text text-lighten-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam non illo earum cumque id est!</h5>
+                    <h5 class="light white-text text-lighten-4">No matter which amount of budget you have, take our promise that we will find you best location possible for your amount of money.</h5>
                     <a href="#" class="btn btn-large">Learn More</a>
                 </div>
             </li>
@@ -90,7 +90,7 @@
                 <!-- random image -->
                 <div class="caption right-align">
                     <h2>Group & Individual Getaways</h2>
-                    <h5 class="light grey-text text-lighten-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam non illo earum cumque id est!</h5>
+                    <h5 class="light white-text text-lighten-4">Group trips are the perfect way to connect with friends and family in a new, inspiring location. Travel with your loved ones for cheap.</h5>
                     <a href="#" class="btn btn-large">Learn More</a>
                 </div>
             </li>
@@ -119,21 +119,21 @@
                     <div class="card-panel">
                         <i class="material-icons large teal-text">room</i>
                         <h4>Pick Where</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus, iure.</p>
+                        <p>Pick which location you want to travel, or ask us to help you with your choice!</p>
                     </div>
                 </div>
                 <div class="col s12 m4">
                     <div class="card-panel">
                         <i class="material-icons large teal-text">store</i>
                         <h4>Travel Shop</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus, iure.</p>
+                        <p>We provide high quality Airport Travel Shops for our customers.</p>
                     </div>
                 </div>
                 <div class="col s12 m4">
                     <div class="card-panel">
                         <i class="material-icons large teal-text">airplanemode_active</i>
                         <h4>Fly Cheap</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus, iure.</p>
+                        <p>Find high quality cheap flights from 1000s of airlines and travel agents.</p>
                     </div>
                 </div>
             </div>
@@ -152,8 +152,9 @@
                             <span class="card-title">Cancun, Mexico</span>
                         </div>
                         <div class="card-content">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis doloribus cupiditate error ut tempore architecto.
+                            Cancún is beautiful Mexican city located on the north of Mexico's Caribbean coast resort known as the Riviera Maya.
                         </div>
+                        <a href="https://www.mexicancaribbean.travel/cancun/" class="btn btn-large places">See More</a>
                     </div>
                 </div>
                 <div class="col s12 m4">
@@ -163,8 +164,9 @@
                             <span class="card-title">The Bahamas</span>
                         </div>
                         <div class="card-content">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis doloribus cupiditate error ut tempore architecto.
+                            The Bahamas is comprised of 700 islands and over 2,000 rocks and cays, sprinkled over 100,000 square miles of ocean.
                         </div>
+                        <a href="https://www.bahamas.com" class="btn btn-large places3">See More</a>
                     </div>
                 </div>
                 <div class="col s12 m4">
@@ -174,14 +176,15 @@
                             <span class="card-title">Nova Scotia</span>
                         </div>
                         <div class="card-content">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis doloribus cupiditate error ut tempore architecto.
+                            Nova Scotia is the eastern Canadian province, most populous of Canada's three Maritime provinces and four Atlantic provinces.
                         </div>
+                        <a href="https://visit.novascotia.com/welcome-to-atlantic-canada/" class="btn btn-large places2">See More</a>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col s12 center">
-                    <a href="#contact" class="btn btn-large grey darken-3">
+                    <a href="#contact" class="btn btn-large darken-3 contact-btn">
                         <i class="material-icons left">send</i> Contact For Booking
                     </a>
                 </div>
@@ -190,22 +193,22 @@
     </section>
 
     <!-- Section: Follow -->
-    <section class="section section-follow teal darken-2 white-text center">
+    <section class="section follow teal darken-2 white-text center">
         <div class="container">
             <div class="row">
                 <div class="col s12">
                     <h4>Follow TravelVille</h4>
                     <p>Follow us on social media for special offers</p>
-                    <a href="#" class="white-text">
+                    <a href="https://www.facebook.com/vukstamenkovic153" target="_blank" class="white-text social1">
                         <i class="fab fa-facebook fa-4x"></i>
                     </a>
-                    <a href="#" class="white-text">
+                    <a href="https://twitter.com/wik1_blaster" target="_blank" class="white-text social5">
                         <i class="fab fa-twitter fa-4x"></i>
                     </a>
-                    <a href="#" class="white-text">
+                    <a href="https://www.instagram.com/vukstamenkovic_/" target="_blank" class="white-text social3">
                         <i class="fab fa-instagram fa-4x"></i>
                     </a>
-                    <a href="#" class="white-text">
+                    <a href="mailto:vukstamenkovic9@gmail.com" target="_blank" class="white-text social4">
                         <i class="fas fa-envelope fa-4x"></i>
                     </a>
                 </div>
@@ -217,7 +220,7 @@
     <section id="gallery" class="section section-gallery scrollspy">
         <div class="container">
             <h4 class="center">
-                <span class="teal-text">Photo </span> Gallery
+                <span class="teal-text">Photo</span> Gallery
             </h4>
             <div class="row">
                 <div class="col s12 m3">
@@ -274,7 +277,7 @@
                     <div class="card-panel teal white-text center">
                         <i class="material-icons">email</i>
                         <h5>Contact Us For Booking</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error in voluptate natus nobis quo iusto commodi distinctio sit ut voluptatibus?</p>
+                        <p class="para">If you would like to reserve a fly, tour, or even just want to talk with us, feel free to contact us on E-mail or visit us at this adress! Have a nice day :)</p>
                     </div>
                     <ul class="collection with-header">
                         <li class="collection-header">
@@ -287,20 +290,24 @@
                 </div>
                 <div class="col s12 m6">
                     <div class="card-panel grey lighten-3">
-                        <h5>Please fill out this form</h5>
+                        <h5>Contact us via E-mail</h5>
                         <div class="input-field">
-                            <input type="text" placeholder="Name">
+                            <form action="https://formspree.io/vukstamenkovic9@gmail.com" method="POST">
+                                <input type="text" name="Name" placeholder="Name" required>
                         </div>
                         <div class="input-field">
-                            <input type="text" placeholder="Email">
+                            <input type="text" name="Email" placeholder="Email" required>
                         </div>
                         <div class="input-field">
-                            <input type="text" placeholder="Phone">
+                            <input type="text" name="Mobile" placeholder="Phone" required>
                         </div>
                         <div class="input-field">
-                            <textarea class="materialize-textarea" placeholder="Enter Mesage"></textarea>
+                            <textarea class="materialize-textarea" name="Message" placeholder="Enter Message" required></textarea>
                         </div>
-                        <input type="submit" value="Submit" class="btn">
+                        <button class="btn waves-effect waves-light submit" type="submit" name="action">Submit
+                            <i class="material-icons right send">send</i>
+                          </button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -313,12 +320,10 @@
     </footer>
     <!--Materialize JS -->
     <script type="text/javascript" src="./js/materialize.min.js"></script>
-    <!-- Jquery JS  File-->
-    <script type="text/javascript" src="./js/jquery-3.5.1.js"></script>
     <!--Fontawesome Icons-->
     <script src="https://kit.fontawesome.com/4f8322d44c.js" crossorigin="anonymous"></script>
-    <!-- Custom JS  File-->
-    <script type="text/javascript" src="./js/main.js"></script>
+    <!-- Custom JS -->
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
